--- a/css/main.scss
+++ b/css/main.scss
@@ -33,7 +33,7 @@ main {
     width: 50%;
 
     .functions {
-        padding: 16px;
+        padding: 8px;
         display: flex;
         flex-flow: column wrap;
         justify-content: center;
@@ -58,9 +58,9 @@ main {
     }
 
     .timeline {
-        height: 72px;
+        height: 56px;
         display: flex;
-        padding: 16px;
+        padding: 8px;
         overflow: hidden;
 
         .step {
@@ -87,11 +87,12 @@ main {
         .row {
             display: flex;
             justify-content: center;
+            padding: 8px;
 
             > div {
                 width: 40px;
                 height: 40px;
-                margin: 8px;
+                margin: 0 8px;
                 border: 1px solid black;
                 display: flex;
                 justify-content: center;
