Add star and hero images

--- a/css/main.scss
+++ b/css/main.scss
@@ -129,6 +129,14 @@ main {
                     outline: 3px solid black;
                     z-index: 1;
                 }
+
+                &[data-tool="star"] {
+                    background: #eaebed url(/img/star.jpg) center center / 80% 80% no-repeat;
+                }
+
+                &[data-tool="hero"] {
+                    background: #eaebed url(/img/hero.jpg) center center / 80% 80% no-repeat;
+                }
             }
         }
     }
