--- a/css/main.scss
+++ b/css/main.scss
@@ -164,7 +164,7 @@ main {
                 margin-bottom: 8px;
             }
 
-            .step {
+            [class^="step"] {
                 cursor: pointer;
                 background-color: #f2f3f4;
                 transition: border-color .2s ease;
@@ -172,6 +172,15 @@ main {
                 &.selected {
                     outline: 3px solid black;
                     z-index: 1;
+
+                    ~ .delete {
+                        opacity: .2;
+                        pointer-events: all;
+
+                        &:hover {
+                            opacity: 1;
+                        }
+                    }
                 }
 
                 &[data-tool^="f"] {
@@ -179,15 +188,47 @@ main {
                     font-size: 12px;
                     font-weight: bold;
                 }
+
+                &.step-add {
+                    opacity: .2;
+
+                    &::after {
+                        content: "+";
+                    }
+
+                    &:hover {
+                        opacity: .7;
+                    }
+                }
             }
 
             span {
+                display: inline-block;
+                width: 16px;
                 margin-right: 8px;
                 text-transform: uppercase;
                 font-size: 12px;
                 font-weight: bold;
                 opacity: .5;
                 transition: color .2s ease;
+            }
+
+            .delete {
+                width: 40px;
+                height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+                pointer-events: none;
+                opacity: 0;
+
+                &::after {
+                    content: "✕";
+                    font-weight: bold;
+                    font-size: 12px;
+                    color: rgba(0,0,0,.8);
+                }
             }
         }
     }
@@ -229,7 +270,7 @@ main {
         }
     }
 
-    .step {
+    [class^="step"] {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -332,7 +373,7 @@ main {
 
 [data-tool="forward"] {
     &::after {
-        content: "↑";
+        content: "↑" !important;
     }
 }
 
@@ -349,20 +390,8 @@ main {
     }
 }
 
-[data-tool="paint"] {
+[data-tool^="f"] {
     &::after {
-        content: "p";
-    }
-}
-
-[data-tool="f1"] {
-    &::after {
-        content: "f1";
-    }
-}
-
-[data-tool="f2"] {
-    &::after {
-        content: "f2";
+        content: attr(data-tool);
     }
 }
