--- a/css/main.scss
+++ b/css/main.scss
@@ -339,6 +339,14 @@ main {
                             box-shadow: 0 0 0 #cc9c00;
                         }
                     }
+
+                    &[data-color="5"] {
+                        box-shadow: 0 4px 0px #a219e6;
+
+                        &:active {
+                            box-shadow: 0 0 0 #a219e6;
+                        }
+                    }
                 }
 
                 &[data-tool^="f"] {
