Fix images paths

--- a/css/main.scss
+++ b/css/main.scss
@@ -131,11 +131,11 @@ main {
                 }
 
                 &[data-tool="star"] {
-                    background: #eaebed url(/img/star.jpg) center center / 80% 80% no-repeat;
+                    background: #eaebed url(../img/star.jpg) center center / 80% 80% no-repeat;
                 }
 
                 &[data-tool="hero"] {
-                    background: #eaebed url(/img/hero.jpg) center center / 80% 80% no-repeat;
+                    background: #eaebed url(../img/hero.jpg) center center / 80% 80% no-repeat;
                 }
             }
         }
