--- a/css/main.scss
+++ b/css/main.scss
@@ -174,6 +174,48 @@ main {
     flex-flow: column;
     justify-content: center;
 
+    .solved-wrap {
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+
+        p {
+            text-align: center;
+            margin-bottom: 16px;
+        }
+
+        .solved {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 32px;
+
+            &:empty {
+                margin-bottom: 0;
+            }
+
+            div {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 40px;
+                height: 40px;
+                background-color: #2b4554;
+                border-radius: 4px;
+                color: white;
+                opacity: .2;
+                cursor: pointer;
+
+                &:not(:last-child) {
+                    margin-right: 8px;
+                }
+
+                &:hover {
+                    opacity: 1;
+                }
+            }
+        }
+    }
+
     .functions-wrap {
         padding: 8px;
         display: flex;
