--- a/css/main.scss
+++ b/css/main.scss
@@ -182,6 +182,18 @@ main {
         p {
             text-align: center;
             margin-bottom: 16px;
+
+            span {
+                animation: fade .6s ease-in-out infinite alternate-reverse;
+
+                &:nth-child(2) {
+                    animation-delay: .2s;
+                }
+
+                &:nth-child(3) {
+                    animation-delay: .4s;
+                }
+            }
         }
 
         .solved {
@@ -469,4 +481,9 @@ main {
     &::after {
         content: attr(data-tool);
     }
+}
+
+@keyframes fade {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
